# Chatbot-telegram

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requisiti_v2.md
bot/handlers/: start.py
database/: engine.py  models.py
