[project]
name = "anonchat"
version = "2.0.0"
description = "AnonChat Bot Telegram"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "alembic",
    "fastapi",
    "uvicorn",
    "jinja2",
    "apscheduler>=3.0",
    "pydantic-settings",
    "structlog",
    "pillow"
]

[tool.setuptools]
packages = ["bot", "core", "dashboard", "database", "i18n", "services", "utils", "scripts"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
